Bug 344196 make nsVariant::SetAsDOMString set mType correctly patch by Andrew Miller <ak.miller@auckland.ac.nz> r=dougt sr=brendan